--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ ruff>=0.1.0
 # Optionnel : pour les notebooks Jupyter
 # jupyter>=1.0.0
 # ipykernel>=6.25.0
+ipympl>=0.9.0  # Pour graphiques matplotlib interactifs dans VS Code/Cursor
 
